--- a/b5/css/foundation.css
+++ b/b5/css/foundation.css
@@ -39,7 +39,7 @@ body {
   font-size: 100%; }
 
 body {
-  background: white;
+  background: #E0E0E0;
   color: #222222;
   padding: 0;
   margin: 0;
@@ -6369,3 +6369,8 @@ th.hide-for-touch {
 
 .touch th.show-for-touch {
   display: table-cell !important; }
+
+
+.header img{
+  padding:1em 3em 3em 3em;
+}
